Add ability to fetch a security's profile
